--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
-body {
+html, body {
+  height: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main {
+  display: flex;
+  flex-direction: column;
+  height: 100vh; /* 100% da altura da viewport */
+}
+
+
+.content {
+  flex: 1; /* Ocupa o espaço restante */
+  overflow: auto; /* Adiciona rolagem ao conteúdo se necessário */
 }
