--- a/src/paginas/tarefas/Tarefas.css
+++ b/src/paginas/tarefas/Tarefas.css
@@ -151,7 +151,12 @@ body {
     gap: 5px;
     z-index: 10; 
 }
-
+form{
+    width: 100%;
+}
+.modal-title {
+    color: gray;
+}
 .task-menu button {
     display: flex;
     align-items: center;
@@ -160,3 +165,74 @@ body {
     min-width: 20px; 
     text-align: center;
 }
+.custom-form-group {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: 0 auto; 
+    margin-bottom: 1rem; 
+}
+
+.custom-form-group label {
+    font-size: 0.9rem;
+    color: #6c757d;
+    font-weight: 300;
+    position: relative;
+    top: 0.5rem;
+    margin: 0 0 0 7px;
+    padding: 0 3px;
+    background: white;
+    width: fit-content;
+}
+
+.custom-form-group input,
+.custom-form-group textarea,
+.custom-form-group select {
+    padding: 11px 10px;
+    font-size: 0.75rem;
+    border: 1px #6c757d solid; 
+    border-radius: 5px;
+    background: white;
+    width: 100%; 
+}
+
+.custom-form-group input:focus,
+.custom-form-group textarea:focus,
+.custom-form-group select:focus {
+    outline: none;
+}
+
+.custom-form-group input[type="radio"] {
+    width: auto; 
+    height: auto; 
+}
+.form-check-input:checked{
+    background-color: #478978; 
+    border-color: #478978; 
+}
+.form-check{
+    margin-top: 10px;
+}
+.custom-modal-footer {
+    display: flex;
+    margin: 0;
+    padding: 10px 0;
+    justify-content: flex-end;
+}
+
+.custom-button, .custom-button:hover {
+    background-color: #478978;
+    font-weight: 600;
+}
+
+.custom-modal-footer {
+    display: flex;
+    margin: 0;
+    padding: 10px 0px;
+    justify-content: flex-end;
+  }
+  
+  .custom-button,  .custom-button:hover {
+    background-color: #478978; 
+    font-weight: 600;
+  }
