--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -11,13 +11,13 @@
 }
 
 .img-container {
-    position: relative;
-    width: auto; 
-    height: 80%; 
+    position: relative ;
+    width: 100% ; 
+    height: auto ; 
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: visible; 
+    overflow: hidden; 
 }
 
 .img-container::before {
@@ -25,21 +25,22 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 100%; 
-    height: 100%;
+    width: 70%; 
+    height: 70%; 
     background-color: #8B95C9;
-    border-radius: 50%; 
-    transform: translate(-50%, -50%); 
-    z-index: 0; 
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 0;
 }
 
 .img-fluid {
-    position: relative; 
-    width: 90%; 
+    position: relative !important;
+    width: 80% !important; 
     height: auto;
     border-radius: 50%;
     z-index: 1;
 }
+
 
 .form-control {
     border-radius: 0.25rem;
@@ -74,9 +75,11 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+    top: -60px; 
 }
 form{
-    width: 55%;
+    width: 55%!important;
 }
 .form-control {
     border-radius: 0.5rem; 
@@ -95,6 +98,7 @@ button{
     border-radius: 0.5rem;
     padding: 0.5rem 1rem;
     font-weight: 600;
+    width: 100px;
     transition: background-color 0.3s ease; 
 }
 .login-cadastrar{
