--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -76,7 +76,7 @@ p {
     align-items: center;
     justify-content: center;
     position: relative;
-    top: -60px; 
+    top: -90px; 
 }
 form{
     width: 55%!important;
@@ -120,6 +120,9 @@ button{
 @media (max-width: 768px) {
     .col-md-6 {
         padding: 0;
+    }
+    .center-form{
+        top:20px;
     }
 }
 @media (max-width: 900px) {
