--- a/src/paginas/tarefasCompletas/TarefasCompletas.css
+++ b/src/paginas/tarefasCompletas/TarefasCompletas.css
@@ -78,6 +78,7 @@ body {
     padding: 5px 10px;
     border-radius: 5px;
     width: 20%;
+    font-weight: 600;
     text-align: center;
     display: inline-block;
     margin-right: 10px;
@@ -87,8 +88,8 @@ body {
     background-color: #f08080;
 }
 
-.task-priority.médio {
-    background-color: #ffff00;
+.task-priority.media {
+    background-color: #FF8C00;
 }
 
 .task-priority.baixa {
