--- a/src/paginas/tarefas/Tarefas.css
+++ b/src/paginas/tarefas/Tarefas.css
@@ -63,10 +63,10 @@ body {
     background-color: white !important;
     margin-bottom: 20px;
     border: 1px solid #ddd;
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 15px;
     height: 300px; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -118,7 +118,10 @@ body {
     margin-bottom: 15px;
     background-color: #90ee90;
 }
-
+hr{
+    color: #6c757d;
+    
+}
 .task-category-container {
     display: flex;
     justify-content: space-between;
