--- a/src/paginas/tarefasCompletas/TarefasCompletas.css
+++ b/src/paginas/tarefasCompletas/TarefasCompletas.css
@@ -41,7 +41,7 @@ body {
     background-color: white !important;
     margin-bottom: 20px;
     border: 1px solid #ddd;
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 15px;
     height: 300px; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -142,7 +142,10 @@ body {
     gap: 5px;
     z-index: 10; 
 }
-
+hr{
+    color: #6c757d;
+    
+}
 .task-menu button {
     display: flex;
     align-items: center;
