Feat: delete tarefa

--- a/src/paginas/tarefas/Tarefas.css
+++ b/src/paginas/tarefas/Tarefas.css
@@ -178,8 +178,9 @@ form{
     display: flex;
     align-items: center;
     gap: 5px;
+    justify-content: center;
     padding: 5px;
-    min-width: 20px; 
+    width: 50px;
     text-align: center;
 }
 .custom-form-group {
